# wolf

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
Glitter/Headers/: mesh.hpp  model.hpp
Glitter/Headers/Utils/: filesystem.hpp.in
Glitter/Shaders/: wavefront.fs
Glitter/Sources/: fuhrercube.cpp  gui.cpp  main.cpp  plane.cpp
Wolf/Headers/Utils/: filesystem.hpp.in
Wolf/Shaders/: lighting.fs  plain.fs  plane.fs  plane.vs  wavefront.fs
Wolf/Sources/: ApplicationCube.cpp  fuhrercube.cpp  gui.cpp  main.cpp
Wolf/Sources/dge/: application.h  camera.h  colors.h  dgetypes.h  inputmanager.h  mesh.h  rendermanager.h  singleton.h  texture.h  windowsmanager.h
Wolf/Sources/dge/Applications/: CubeApplication.cpp  CubeApplication.h  FPSDemoApplication.cpp  FPSDemoApplication.h  TriangleApplication.cpp  TriangleApplication.h
Wolf/Sources/dge/platform/: platform.h
